<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.suu.ktrinanm.finalproject.VerifyEventInfo">

    <TextView
        android:id="@+id/veTxtVwAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ve_address"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="244dp" />

    <TextView
        android:id="@+id/veTxtVwDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ve_descrp"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="147dp"
        app:layout_constraintTop_toTopOf="@+id/veEdTxtTitle"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/veEdTxtDesc"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/veEdTxtDesc"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textCapSentences|textAutoCorrect|textMultiLine|textLongMessage"
        tools:layout_editor_absoluteY="131dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/veTxtVwEndT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ve_end_dt"
        android:textSize="18sp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/veEdTxtEndDate"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/veTxtVwMnTitle"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/verify"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="28sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/veEdTxtEndDate"
        android:layout_width="143dp"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="date"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/veEdTxtEndTime"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/veEdTxtStrDate"
        android:layout_width="143dp"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="date"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/veEdTxtStrTime"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/veEdTxtStrTime"
        android:layout_width="143dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="time"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/veBtnBack"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/veEdTxtEndTime"
        android:layout_width="143dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="time"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/veBtnAdd"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/veBtnAdd"
        android:layout_width="126dp"
        android:layout_height="48dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:text="@string/ve_add"
        tools:layout_editor_absoluteX="242dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/veBtnBack"
        android:layout_width="137dp"
        android:layout_height="48dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/ve_back"
        tools:layout_editor_absoluteX="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/veTxtVwStartT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ve_start_t"
        android:textSize="18sp"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toTopOf="@+id/veEdTxtStrDate"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/veTxtVwTitleSum"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:text="@string/ve_title_sum"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="133dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/veEdTxtTitle"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/veTxtVwMnTitle" />

    <EditText
        android:id="@+id/veEdTxtTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="textCapWords|textShortMessage"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="65dp"
        android:layout_marginRight="1dp" />

    <EditText
        android:id="@+id/veEdTxtAddress"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPostalAddress"
        tools:layout_editor_absoluteY="266dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

</android.support.constraint.ConstraintLayout>
